# yt-transcript

./: .env.example  .gitignore  README.md  download_transcript.py  install.sh  pyproject.toml  ytt.py
