[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytt"
version = "0.1.0"
description = "Download YouTube video transcripts as plain text"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["youtube", "transcript", "subtitles", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = ["youtube-transcript-api>=1.0.0,<2.0.0"]

[project.scripts]
ytt = "ytt:main"

[project.urls]
Homepage = "https://github.com/cloonix/yt-transcript"
Repository = "https://github.com/cloonix/yt-transcript"
